Refactor Kafka consumer classes and update related DTOs
- Updated ConsumerBridge, Starter, EventConsumer, and handler classes for Create, Delete, and Update Person operations.
- Modified CreatePersonData and UpdatePersonData DTOs to reflect changes in data structure.
- Added new Maven compiler plugin input and created files lists.
- Generated new JAR files for the service.
- Created Surefire reports for unit tests, confirming successful execution of ConsumerBridgeTest.